featured image url

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,7 @@ collections:
       - { name: title, label: Title }
       - { name: description, label: Description }
       - { name: body, label: Body, widget: markdown }
+      - { name: featured_image_url, label: Featured Image URL }
       - label: "Tags"
         name: "tags"
         widget: "list"
