--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,3 +30,13 @@ collections:
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: link, label: Link }
+
+  - name: things
+    label: Things
+    folder: content/things
+    create: true
+    fields:
+      - { name: date, label: Date, widget: date }
+      - { name: title, label: Title }
+      - { name: description, label: Description }
+      - { name: link, label: Link }
